[gd_scene load_steps=8 format=3 uid="uid://b2usqgi4jvj12"]

[ext_resource type="Texture2D" uid="uid://dtd3w2x0ibgp4" path="res://assets/BG.png" id="1_0tsg8"]
[ext_resource type="Script" path="res://desktop.gd" id="1_ed6rk"]
[ext_resource type="Texture2D" uid="uid://bwg1vpo1dmwoh" path="res://assets/McAfee.png" id="2_qcmjx"]
[ext_resource type="Texture2D" uid="uid://2gh0evij8hru" path="res://assets/SystemIcon.png" id="3_ed6rk"]
[ext_resource type="PackedScene" uid="uid://cbfes3i1f08bf" path="res://player_test.tscn" id="4_wiyix"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6lsg3"]
size = Vector2(47, 29)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cmsrr"]
size = Vector2(398, 39)

[node name="Desktop" type="Node2D"]
script = ExtResource("1_ed6rk")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(200, 150)
texture = ExtResource("1_0tsg8")

[node name="McAfee" type="Sprite2D" parent="."]
texture = ExtResource("2_qcmjx")

[node name="PC" type="Area2D" parent="."]
position = Vector2(373, 123)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PC"]
position = Vector2(-0.5, -4.5)
shape = SubResource("RectangleShape2D_6lsg3")

[node name="Sprite2D" type="Sprite2D" parent="PC"]
texture = ExtResource("3_ed6rk")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(200, 159.5)
shape = SubResource("RectangleShape2D_cmsrr")

[node name="ColorRect" type="ColorRect" parent="StaticBody2D"]
offset_top = 140.0
offset_right = 400.0
offset_bottom = 179.0
color = Color(1, 0, 0, 1)

[node name="PlayerTest" parent="." instance=ExtResource("4_wiyix")]
position = Vector2(51, 120)
scale = Vector2(0.293273, 0.306633)

[connection signal="body_entered" from="PC" to="." method="_on_pc_body_entered"]
